# setup-example

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/setupexample/: example_functions.py
tests/: test_example_functions.py
