[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "setup-example"
version = "0.0.0"
authors = [
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "setup-example workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.2",
]

[project.urls]
"Homepage" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/setup-example"
"Bug Tracker" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/setup-example/issues"